force-app/main/default/objects/Activity/fields/Type_of_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Appointment__c</fullName>
    <label>Type of Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401k Rollover Options</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>A La Carte</fullName>
            </value>
            <value>
                <fullName>Backup</fullName>
            </value>
            <value>
                <fullName>BNA</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Bookkeeping Services Consultation</fullName>
            </value>
            <value>
                <fullName>Calendar Block</fullName>
            </value>
            <value>
                <fullName>ClientBooks Bookkeeper</fullName>
            </value>
            <value>
                <fullName>ClientBooks Consultation</fullName>
            </value>
            <value>
                <fullName>ClientBooks Demo</fullName>
            </value>
            <value>
                <fullName>Customer Integration Specialist</fullName>
            </value>
            <value>
                <fullName>Digital Business Solutions</fullName>
            </value>
            <value>
                <fullName>Discovery Call</fullName>
            </value>
            <value>
                <fullName>Equip Consultation</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Formation Consultation</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>NYSB</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <default>true</default>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Quarterly Estimated Taxes</fullName>
            </value>
            <value>
                <fullName>Reassigned Discovery Call</fullName>
            </value>
            <value>
                <fullName>Retirement Planning</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Use Tax</fullName>
            </value>
            <value>
                <fullName>Sales Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>