force-app/main/default/objects/Activity/fields/Vonage_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Attempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for a call where ring time &gt;0</description>
    <label>Vonage Call Attempt</label>
    <type>Checkbox</type>
</CustomField>