force-app/main/default/objects/Activity/fields/Vonage_Call_Back_Time__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Back_Time__c</fullName>
    <label>Vonage Call Back Time</label>
    <type>DateTime</type>
</CustomField>