force-app/main/default/objects/Activity/fields/Vonage_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Disposition__c</fullName>
    <label>Vonage Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bad Number</fullName>
            </value>
            <value>
                <fullName>Call Back Set</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Internal Call</fullName>
            </value>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Live Transfer</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Not A Sales Opportunity</fullName>
            </value>
            <value>
                <fullName>Not Interested in TSA Appointment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TSA Appointment Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>