force-app/main/default/objects/Activity/fields/Vonage_Connected_Call__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Connected_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for a call where talk time &gt;0</description>
    <label>Vonage Connected Call</label>
    <type>Checkbox</type>
</CustomField>