force-app/main/default/objects/Activity/fields/Vonage_Contact_Made__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Contact_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for a call which has outcomes meaning the agent has spoken to the appropriate person</description>
    <label>Vonage Contact Made</label>
    <type>Checkbox</type>
</CustomField>