force-app/main/default/objects/Activity/fields/Vonage_Successful_Call__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Successful_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for a call which has outcomes meaning the agent had a successful outcome e.g Sale Successful</description>
    <label>Vonage Successful Call</label>
    <type>Checkbox</type>
</CustomField>