force-app/main/default/objects/Activity/fields/Vonage_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Trigger__c</fullName>
    <formula>NVMContactWorld__CW_Call_End_Time__c +64/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vonage Trigger</label>
    <type>DateTime</type>
</CustomField>