force-app/main/default/objects/Activity/fields/Vonage_Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Trigger_Time__c</fullName>
    <description>A date time field to be used when scheduling flows or processes on task</description>
    <label>Vonage Trigger Time</label>
    <type>DateTime</type>
</CustomField>