force-app/main/default/objects/Activity/listViews/Claire_s_Tasks.listView-meta.xml
<ListView>
    <fullName>Claire_s_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Report_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>10/5/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>equals</operation>
        <value>&gt; 60 Days since contact</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>jchen</value>
    </filters>
    <label>Claire&apos;s Tasks</label>
    <language>en_US</language>
</ListView>