force-app/main/default/objects/Activity/listViews/Hollie_s_F_U.listView-meta.xml
<ListView>
    <fullName>Hollie_s_F_U</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>hpach</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>12/13/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>notContain</operation>
        <value>sales,block,outbound,dead,email,inbound</value>
    </filters>
    <label>Hollie&apos;s F/U</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Bravo_Team</roleAndSubordinates>
    </sharedTo>
</ListView>