force-app/main/default/objects/Activity/listViews/Jennifer_s_List.listView-meta.xml
<ListView>
    <fullName>Jennifer_s_List</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>LZ LP Appointment</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>4/9/2017 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Jennifer&apos;s List</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Bravo_Team</roleAndSubordinates>
    </sharedTo>
</ListView>