force-app/main/default/objects/Activity/listViews/Kuckens_Appts_and_Followups.listView-meta.xml
<ListView>
    <fullName>Kuckens_Appts_and_Followups</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>mkuck</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>1on1,sales,follow</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>6/28/2018 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>notEqual</operation>
        <value>email</value>
    </filters>
    <label>Kuckens Appts and Followups</label>
    <language>en_US</language>
    <sharedTo>
        <role>Manager</role>
    </sharedTo>
</ListView>