force-app/main/default/objects/Activity/listViews/LZ_LP_Appts.listView-meta.xml
<ListView>
    <fullName>LZ_LP_Appts</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>contains</operation>
        <value>LZ LP Appointment</value>
    </filters>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>LZ LP Appts</label>
    <language>en_US</language>
    <sharedTo>
        <role>Charlie_Team</role>
    </sharedTo>
</ListView>